--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.9.3",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "next": "15.1.4",
